<resources>
    <string name="app_name">tickets</string>
    <string name="title_tickets">Авиабилеты</string>
    <string name="title_hotels">Отели</string>
    <string name="title_koroche">Короче</string>
    <string name="title_notify">Подписки</string>
    <string name="title_profile">Профиль</string>
    <string name="find_cheap_tickets">Поиск дешевых \nавиабилетов</string>

    <string name="offer_price">от %s ₽</string>
    <string name="ticket_price">%s ₽</string>
    <string name="flight_time">%sч в пути</string>
    <string name="flight_data">%s, 1 пассажир</string>
    <string name="filter_text">Фильтр</string>
    <string name="graph_text">График цен</string>
    <string name="reflight_text">Пересадки</string>
    <string name="no_reflight_text">Без пересадок</string>
    <string name="only_luggage_text">Только с багажом</string>
    <string name="done_text">Готово</string>
    <string name="dep_hint_text">Откуда - Москва</string>
    <string name="arr_hint_text">Куда - Турция</string>
    <string name="hard_route_text">Сложный\nмаршрут</string>
    <string name="anywhere_text">Куда угодно</string>
    <string name="weekends_text">Выходные</string>
    <string name="hot_tickets_text">Горячие\nбилеты</string>
    <string name="stambul_text">Стамбул</string>
    <string name="popular_flights_text">Популярное направление</string>
    <string name="sochi_text">Сочи</string>
    <string name="phuket_text">Пхукет</string>
    <string name="return_text">обратно</string>
    <string name="amount_text">1, эконом</string>
    <string name="filter_small_text">фильтры</string>
    <string name="direct_flights_text">Прямые рейсы</string>
    <string name="show_all_tickets_text">Посмотреть все билеты</string>
    <string name="notify_price_text">Подписка на цену</string>
    <string name="offer_text">Музыкально отлететь</string>
    <string name="working_text">В работе</string>
    <string name="no_reflight_text_2">/Без пересадок</string>
    <string name="error_text">Что то пошло не так</string>
    <string name="retry_btn_text">Попробовать еще раз</string>
    <string name="tire_text">-</string>
</resources>